[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mobius"
version = "0.1.0"
description = "Static documentation site generator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "click>=8.1",
  "jinja2>=3.1",
  "markdown>=3.6",
  "pygments>=2.17",
  "PyYAML>=6.0",
  "watchdog>=4.0",
  "osmium @ git+https://github.com/vennelavarshini18/osmium.git@04797f2",
]

[project.scripts]
mobius = "mobius.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
